Subprocesses and boundary events: identify, decompose, combine, reverse-render and render